# flymq

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  ROADMAP.md  go.mod  go.sum  install.ps1  install.sh  uninstall.ps1  uninstall.sh
benchmarks/: README.md  benchmark-cluster2.json  benchmark-cluster3-new.json  benchmark-cluster3.json  benchmark-results.json  benchmark-standalone-new.json  benchmark-standalone.json  benchmark.go  docker-compose.yml  run-benchmark.sh
cmd/flymq/: main.go
cmd/flymq-cli/: main.go
cmd/flymq-discover/: main.go
deploy/docker/: Dockerfile  docker-compose.enterprise-agent.yml  docker-compose.enterprise.yml  docker-entrypoint.sh  nginx.conf
deploy/systemd/: flymq-cluster@.service  flymq.service
docs/: admin-api.md  api-reference.md  architecture.md  configuration.md  consumer-groups.md  deployment-aws.md  deployment-azure.md  deployment-gcp.md  deployment-onprem.md  design-decisions.md  getting-started.md  implementation.md  observability.md  protocol.md  sdk_development.md  topics-keys-partitions-guide.md
scripts/: test-security.sh
sdk/: ARCHITECTURE.md  SDK_DOCUMENTATION_GUIDE.md  START_HERE.md
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/docs/: CONSUMER_PATTERNS.md  GETTING_STARTED.md  PRODUCER_PATTERNS.md  SECURITY.md
sdk/python/examples/: 01_basic_produce_consume.py  02_key_based_messaging.py  03_consumer_groups.py  04_transactions.py  05_encryption.py  06_reactive_streams.py  07_schema_validation.py  08_error_handling.py  09_tls_authentication.py  10_advanced_patterns.py
sdk/python/pyflymq/: __init__.py  binary.py  client.py  consumer.py  crypto.py  exceptions.py  matcher.py  models.py  producer.py  protocol.py  reactive.py  serde.py  tls.py  types.py
sdk/python/tests/: __init__.py  test_integration.py  test_protocol.py
(+161 files in other folders)
