[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyflymq"
version = "1.26.7"
description = "Python client SDK for FlyMQ - High-Performance Distributed Message Queue"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Firefly Software Solutions Inc.", email = "dev@getfirefly.io" }
]
keywords = ["flymq", "message-queue", "distributed", "streaming", "kafka-alternative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
    "cryptography>=41.0.0",
    "reactivex>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://getfirefly.io"
Documentation = "https://getfirefly.io/docs/flymq/python"
Repository = "https://github.com/firefly-oss/flymq"

[tool.hatch.build.targets.wheel]
packages = ["pyflymq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
